# commfinder

./: .gitignore  CMakeLists.txt  README.md
src/: bruteforcesolver.cpp  bruteforcesolver.h  commutatorfinder.cpp  commutatorfinder.h  cube_moves.cpp  cube_moves.h  cubestate.cpp  cubestate.h  helpers.cpp  helpers.h  incrementalscramble.cpp  incrementalscramble.h  main.cpp  searchcriteria.cpp  searchcriteria.h
test/: CMakeLists.txt  cftests.cpp  testalgs.h
